--- a/poke-dex/package.json
+++ b/poke-dex/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-infinite-scroll-hook": "^4.1.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
