--- a/poke-dex/package.json
+++ b/poke-dex/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-infinite-scroll-hook": "^4.1.1",
+    "react-intersection-observer-hook": "^2.1.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
