--- a/poke-dex/package.json
+++ b/poke-dex/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "react-icons": "^4.12.0",
     "react-infinite-scroll-hook": "^4.1.1",
     "react-intersection-observer-hook": "^2.1.1",
+    "react-redux": "^9.0.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
